--- a/BIT SHOW Project/info-page.html
+++ b/BIT SHOW Project/info-page.html
@@ -12,7 +12,7 @@
   <header> 
     <nav class="navbar">
         <div class="container-fluid  justify-content-around">
-          <a class="navbar-brand" href = "index.html">BitSHow</a>
+          <a class="navbar-brand" href="./index.html">BitSHow</a>
           <form  onsubmit="return false">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
          
@@ -26,10 +26,10 @@
       <h1 class="show-name"></h1>
        <div class="container">
          <div class="row main-row">
-           <div class="col img-col">
+           <div class="col-12 col-md-6 col-sm-12 img-col">
              <img src="" alt="" class="img-info">
            </div>
-           <div class="col txt-col">
+           <div class="col-12 col-md-6 col-sm-12 txt-col">
              <div class="row">
                <div class="col">
                  <h5 class="seasons-num"></h5>
@@ -42,27 +42,36 @@
              </div>
              <div class="row">
               <div class="col">
-                <h5>Cast</h5>
-                <ul class = "cast-list"></ul>
+                <h5>Cast </h5>
+                <ul class="cast-list"></ul>
               </div>
              </div>
              <div class="row">
               <div class="col">
                 <h5>Crew</h5>
-                <ul class = "crew-list"></ul>
+                <ul class="crew-list"></ul>
               </div>
              </div>
            </div>
          </div>
          <div class="row">
             <h4>Show details </h4>
-           <div class="col summary"></div>
+           <div class="col-12 summary"></div>
+           <div class=" col-12 akas">
+             <h5>AKA'S</h5>
+             <p class="p-akas"></p>
+
+           </div>
          </div>
 
        </div>
 
 
     </section>
+
+    <footer class="container-fluid footer">
+      <div>Copyright &#169 Bit Student 2021</div>
+    </footer>
 
     
 
