--- a/BIT SHOW Project/index.html
+++ b/BIT SHOW Project/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./CSS/Style.css">
+    <link rel="stylesheet" href="./CSS/style.css">
     <title>BIT SHOW</title>
 </head>
 <body>
-  <header> 
+    <header> 
     <nav class="navbar">
         <div class="container-fluid  justify-content-around">
-          <a class="navbar-brand" href = "index.html">BitSHow</a>
+          <a class="navbar-brand" href="./index.html">BitSHow</a>
           <form  onsubmit="return false">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
          
@@ -33,19 +33,14 @@
 
 
    </main>
-<div class=" row container-fluid  justify-content-around">
-   <div class= "col col-sm-12 gy-5">
-    <h5>Copyright <span><img class = "icon" src="/Assets/Icons/copyright.png"></span> Bit Student 2017</h5>
-  </div>
-  </div>
-</div>
-</div>
-</footer>
+   <footer class="container-fluid footer">
+    <div>Copyright &#169 Bit Student 2021</div>
+  </footer>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
   <script src="./JS/model.js"></script>
   <script src="./JS/controller.js"></script>
-  <script src="./JS/search.js"></script>
+   <script src="./JS/search.js"></script>
 </body>
 </html>
